[package]
name = "dfx"
version = "0.1.0"
authors = ["Tobias Renwick <renwick@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "DFx"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.pyo3]
version = "0.13.2"
extension-module = ["extension-module"]
default = ["extension-module"]

[dependencies]
num-format = "0.4.0"
sql-builder = "1.1.1"
crossbeam = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.7.1"
evmap = "10.0.2"
postgres = "0.18.1"
tokio-postgres="0.6.0"
itertools = "0.9.0"
rand = "0.7"
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
regex = "1.3.7"
ndarray = "0.13.1"
deepsize = "0.2.0"
